Bug 542096.  Unbreak multipart jpegs on 1.9.2 branch.  r=joedrew